--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,11 @@
   
   <link rel="stylesheet" href="https://use.typekit.net/ers7cug.css">
 
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-  <script src="node_modules/chart.js/src/chart.js"></script>
   <app-root></app-root>
 
 <footer>
