Handlebars added for confirmation email. Can't apply to loan after student applies or gets approved. Can now mark as paid.

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="./favicon.ico">
   
-  <link rel="stylesheet" href="https://use.typekit.net/ers7cug.css">
+  <link href="https://use.typekit.net/ers7cug.css">
+  <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+  <link href="../node_modules/mdbootstrap/css/bootstrap.min.css">
+  <link href="../node_modules/mdbootstrap/css/mdb.min.css">
+  <link href="../node_modules/mdbootstrap/css/style.css">
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
 </head>
 
 <body>
